--- a/chillax.theme.css
+++ b/chillax.theme.css
@@ -30,9 +30,9 @@
 @import url('https://mwittrien.github.io/BetterDiscordAddons/Themes/_res/SettingsIcons.css');
 @import url('https://nyri4.github.io/Discolored/main.css');
 @import url("https://warrayquipsome.github.io/Chillax/Addons/IconPackEdited.css");
-@import url("https://warrayquipsome.github.io/Chillax/Addons/AvatarOnlyMemberList.css");
 
 /*additional addons*/ /*(remove the both * to use)*/
+/*@import url("https://warrayquipsome.github.io/Chillax/Addons/AvatarOnlyMemberList.css");*/
 /*@import url("https://warrayquipsome.github.io/Chillax/Addons/SimpleLessLag.css");*/
 
 
